<resources>
    <string name="app_name">ActionBar02Propuesto</string>
    <string name="action_settings">Settings</string>
    <string name="action_rojo">Rojo</string>
    <string name="action_verde">Verde</string>
    <string name="action_azul">Azul</string>
    <string name="item_nuevo">Nuevo</string>
    <string name="item_actualizar">Actualizar</string>
    <string name="item_retirar">Retirar</string>
</resources>
